@startuml

title __CONTROLLER's Class Diagram__\n

  package com.masterarbeit {
    package com.masterarbeit.controller {
      class ValidatorController {
          + ValidatorController()
          + getAll()
          + create()
          + remove()
          + compareSelected()
      }
    }
  }
  

  package com.masterarbeit {
    package com.masterarbeit.controller {
      class ViewController {
          + ViewController()
          + index()
          + compare()
          + compareSelected()
          + compareOne()
          + findTheMostLikely()
          + compareSAP()
          + tablenames()
          + showSelectedTables()
          + getalltypes()
          + test()
          + greetingSubmit()
      }
    }
  }
  

  ValidatorController o-- PatientRepository : patientRepository
  ValidatorController o-- PatientAnonymRepository : patientAnonymRepository
  ViewController o-- PatientRepository : patientRepository
  ViewController o-- PatientAnonymRepository : patientAnonymRepository
  ViewController o-- SapRepository : sapRepository
  ViewController o-- QupSapRepository : qupSapRepository
  ViewController o-- CompareService : compareService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
